[gd_scene load_steps=11 format=3 uid="uid://f2xccal3oc1w"]

[ext_resource type="Texture2D" uid="uid://nwnpmesoai6b" path="res://assets/bg.png" id="1_2nd0d"]
[ext_resource type="Script" path="res://node_2d.gd" id="1_ssrr6"]
[ext_resource type="Texture2D" uid="uid://dqlot7rpisdwn" path="res://assets/block dark.png" id="2_tax4n"]
[ext_resource type="Texture2D" uid="uid://wgpbpebqc0vo" path="res://assets/X.png" id="3_c6wir"]
[ext_resource type="Texture2D" uid="uid://wbh4myyi0a6f" path="res://assets/Y.png" id="4_l160g"]
[ext_resource type="Texture2D" uid="uid://cqp213y7mxq8d" path="res://assets/button rectangle.png" id="5_clywc"]
[ext_resource type="Texture2D" uid="uid://ckn6tbhv8gblr" path="res://assets/IOwindow.png" id="6_kwluk"]
[ext_resource type="Texture2D" uid="uid://cpgw1t05hgun3" path="res://assets/button square.png" id="7_dnlfk"]
[ext_resource type="Texture2D" uid="uid://c0bvbweykmknh" path="res://assets/fliped IOwindow.png" id="8_mxo6d"]
[ext_resource type="Texture2D" uid="uid://g12dq6wuq8x" path="res://assets/пунктир.png" id="10_lnbd3"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ssrr6")

[node name="--" type="Sprite2D" parent="."]
position = Vector2(700, 250)
scale = Vector2(10, 10)
texture = ExtResource("1_2nd0d")

[node name="-" type="Sprite2D" parent="."]
position = Vector2(160, 250)
scale = Vector2(3.2, 10)
texture = ExtResource("2_tax4n")

[node name="X" type="Sprite2D" parent="."]
position = Vector2(813, 455)
scale = Vector2(1.22, 1)
texture = ExtResource("3_c6wir")

[node name="X2" type="Sprite2D" parent="."]
position = Vector2(813, 351)
scale = Vector2(1.22, 1)
texture = ExtResource("3_c6wir")

[node name="X3" type="Sprite2D" parent="."]
position = Vector2(813, 247)
scale = Vector2(1.22, 1)
texture = ExtResource("3_c6wir")

[node name="X4" type="Sprite2D" parent="."]
position = Vector2(813, 143)
scale = Vector2(1.22, 1)
texture = ExtResource("3_c6wir")

[node name="X5" type="Sprite2D" parent="."]
position = Vector2(813, 39)
scale = Vector2(1.22, 1)
texture = ExtResource("3_c6wir")

[node name="Y" type="Sprite2D" parent="."]
position = Vector2(460, 250)
scale = Vector2(1, 1.664)
texture = ExtResource("4_l160g")

[node name="ButtonLoad" type="TextureButton" parent="."]
offset_left = 32.0
offset_top = 192.0
offset_right = 132.0
offset_bottom = 242.0
scale = Vector2(1.28, 1.12)
texture_normal = ExtResource("5_clywc")

[node name="Label" type="Label" parent="ButtonLoad"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 18
text = "Построить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonRandom" type="TextureButton" parent="."]
offset_left = 32.0
offset_top = 264.0
offset_right = 132.0
offset_bottom = 314.0
scale = Vector2(1.28, 1.12)
texture_normal = ExtResource("5_clywc")

[node name="Input1" type="Sprite2D" parent="."]
position = Vector2(82, 92)
scale = Vector2(1, 1.01333)
texture = ExtResource("6_kwluk")

[node name="MarginContainer" type="MarginContainer" parent="Input1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -75.0
offset_right = -50.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextEdit" type="TextEdit" parent="Input1/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Время
прихода
программ
(макс. 8)"

[node name="Input2" type="Sprite2D" parent="."]
position = Vector2(238, 92)
scale = Vector2(1, 1.01333)
texture = ExtResource("6_kwluk")

[node name="MarginContainer2" type="MarginContainer" parent="Input2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -75.0
offset_right = -50.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextEdit" type="TextEdit" parent="Input2/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Время
длит.
программ
(макс. 8)"

[node name="ButtonClear" type="TextureButton" parent="."]
offset_left = 200.0
offset_top = 216.0
offset_right = 300.0
offset_bottom = 316.0
scale = Vector2(0.81, 0.81)
texture_normal = ExtResource("7_dnlfk")

[node name="Info" type="Sprite2D" parent="."]
position = Vector2(160, 412)
scale = Vector2(1.70667, 1.36)
texture = ExtResource("8_mxo6d")

[node name="Builder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 448.0
offset_top = 24.0
offset_right = 1176.0
offset_bottom = 472.0

[node name="Пунктир" type="Sprite2D" parent="."]
position = Vector2(656, 80)
texture = ExtResource("10_lnbd3")

[connection signal="pressed" from="ButtonLoad" to="." method="_on_button_load_pressed"]
